--- a/final.Rmd
+++ b/final.Rmd
@@ -110,8 +110,7 @@ acc_dt %>% ggplot(aes(x=fct_infreq(District.Name))) +
   geom_bar() +
   geom_text(stat='count', aes(label=..count..), vjust=-0.3) +
   labs(x = 'District', y = 'Number of Accidents') +
-  theme(axis.text.x = element_text(angle = 30, vjust = 0.95, hjust=0.65)) + 
-  theme_light()
+  theme(axis.text.x = element_text(angle = 30, vjust = 0.95, hjust=0.65)) 
 
 ```
 
@@ -124,14 +123,13 @@ p1 <- full_neighborhood_dt %>%
   ggplot(aes(x=N.Pop,y=N.Accidents)) + geom_point(alpha = 0.5) + stat_smooth(method="lm") + 
   geom_text_repel(aes(label=Neighborhood.Name)) +
   labs(x = '', y = 'Number of Accidents', title = "Number of Accidents by Neighborhood Population") +
-  theme(plot.title = element_text(size=14, margin=margin(b=14))) + 
-  theme_light()
+  theme(plot.title = element_text(size=14, margin=margin(b=14))) 
+
 p2 <- full_district_dt %>% 
   ggplot(aes(x=N.Pop,y=N.Accidents)) + geom_point(alpha = 0.5) + stat_smooth(method="lm") + 
   geom_text_repel(aes(label=District.Name)) +
   labs(x='', y='', title = "Number of Accidents by District Population") +
-  theme(plot.title = element_text(size=14, margin=margin(b=14))) + 
-  theme_light()
+  theme(plot.title = element_text(size=14, margin=margin(b=14)))
 
 p1 + p2
 grid::grid.draw(grid::textGrob("Population", y=0.05, x=0.52))
@@ -157,15 +155,13 @@ p1 <- full_neighborhood_dt %>%
   ggplot(aes(x=N.Transports,y=N.Accidents)) + geom_point(alpha = 0.5) + stat_smooth(method="lm") + 
   geom_text_repel(aes(label=Neighborhood.Name)) +
   labs(x = '', y = 'Number of Accidents', title = "Number of Accidents against Transports in the Neighborhood") +
-  theme(plot.title = element_text(size=14, margin=margin(b=14))) + 
-  theme_light()
+  theme(plot.title = element_text(size=14, margin=margin(b=14))) 
 
 p2 <- full_district_dt %>% 
   ggplot(aes(x=N.Transports,y=N.Accidents)) + geom_point(alpha = 0.5) + stat_smooth(method="lm") + 
   geom_text_repel(aes(label=District.Name)) +
   labs(x='', y='', title = "Number of Accidents against Transports in the District") +
-  theme(plot.title = element_text(size=14, margin=margin(b=14))) + 
-  theme_light()
+  theme(plot.title = element_text(size=14, margin=margin(b=14))) 
 
 p1 + p2
 grid::grid.draw(grid::textGrob("Number of Transports", y=0.05, x=0.52))
@@ -196,13 +192,11 @@ ggplot(full_neighborhood_dt) + geom_point(aes(N.Bus.Stops, N.Accidents, color = 
   geom_smooth(aes(N.Transports, N.Accidents, color = "Transports"), method = "lm") +
   labs(x = "Number of stops", y="Number of accidents", title = "Correlation between Stops and Accidents by neighborhood", color="Stop type") +
   guides(color=guide_legend(override.aes=list(fill=NA))) +
-  theme(legend.position = c(0.93, 0.1)) + 
-  theme_light()
+  theme(legend.position = c(0.93, 0.1)) 
 
 ggplot(full_neighborhood_dt, aes(N.Transports, N.Bus.Stops)) + geom_point(alpha = 0.5) +
   geom_smooth(method = "lm") + 
-  labs(title = "Correlation between Transport and Bus stops by neighborhood", x="Number of transport stops", y="Number of bus stops") + 
-  theme_light()
+  labs(title = "Correlation between Transport and Bus stops by neighborhood", x="Number of transport stops", y="Number of bus stops")
 
 
 ## correlation coefficients
@@ -222,8 +216,7 @@ full_neighborhood_dt[, bus_strata := with(full_neighborhood_dt, cut(N.Bus.Stops,
   geom_point(alpha = 0.5) + 
   geom_smooth(method = "lm") + 
   facet_wrap(~ bus_strata, scales = "free") + 
-  labs(x="Number of transport stops", y ="Number of accidents", title="Correlation Accidents by Transports controlled for the Number of Bus Stops") + 
-  theme_light()
+  labs(x="Number of transport stops", y ="Number of accidents", title="Correlation Accidents by Transports controlled for the Number of Bus Stops")
   
 ```
 
@@ -254,15 +247,13 @@ A positive correlation between accidents and transport stops of about 0.65 still
 If our hypothesis is that the accidents are due to the afflux of people, we would expect their distribution throughout the day or the week not to be uniform.
 
 ```{r acc_hourly, fig.show="hold", out.width="50%"}
-ggplot(acc_dt, aes(x=Hour)) + geom_bar() +labs(y="Number of accidents", title="Number of accidents by Hour") + 
-  theme_light()
+ggplot(acc_dt, aes(x=Hour)) + geom_bar() +labs(y="Number of accidents", title="Number of accidents by Hour")
 
 acc_dt %>%
   mutate(Weekday=factor(Weekday, levels=c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"))) %>%
   ggplot(aes(x=Weekday)) + geom_bar() +
   labs(title="Number of accidents by Weekday") +
-  theme(axis.title.y = element_blank()) + 
-  theme_light()
+  theme(axis.title.y = element_blank())
 ```
 
 As we can see, there are three peaks in the number of accidents: around 8-9 o'clock, 13-14 o'clock, and 18-19 o'clock. This leads us to believe that the traffic is expecially high at those times, which seems logical since these hours correspond to the _going-to-work-time_, _lunch-time_ and _coming-back-from-work-time_.
@@ -283,8 +274,7 @@ acc_dt %>%
         axis.text.y=element_blank(), axis.ticks.y=element_blank(),
         legend.title = element_text(size=8),
         title = element_text(size=8),
-        panel.grid = element_blank()) + 
-  theme_light()
+        panel.grid = element_blank()) 
 
 ```
 What is interesting here, is that the density focuses into one central point, namely the Eixample disctrict (calculated from the Long and Lat variables). We can clearly see that accidents in areas leading from/to (especially south and north) the center get more dense during the morning and afternoon. This further proves the above theory.
@@ -360,16 +350,14 @@ ggplot(plot_conf_matrix, aes(x = V2, y = predict_reg, fill = goodbad, alpha = pr
   scale_y_discrete(labels=c("0" = "Morning", "1" = "Non-Morning")) + 
   labs(title=paste0('Confusion Matrix (Overall Accuracy:  ', round(1 - missing_class, 3), ')'), x="True Label", y="Predicted Label") +
   guides(fill="none", alpha="none") + 
-  theme_light()
-  #theme_bw()
+  theme_bw()
 
 # Calculate ROC Curve and AUC. Plot afterwards. 
 rocobj <- roc(data_test$Part.of.the.day, predict_reg)
 auc <- round(auc(data_test$Part.of.the.day, predict_reg),4)
 
 ggroc(rocobj, colour = 'steelblue', size = 2) +
-  ggtitle(paste0('ROC Curve ', '(AUC = ', auc, ')')) + 
-  theme_light()
+  ggtitle(paste0('ROC Curve ', '(AUC = ', auc, ')')) 
 
 ```
 
